--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,18 @@
 {
-  "require" : {
-    "silex/silex": "^2.0.4",
-    "monolog/monolog": "^1.22",
-    "twig/twig": "^2.0",
-    "symfony/twig-bridge": "^3"
-  },
-  "require-dev": {
-    "heroku/heroku-buildpack-php": "*"
-  }
+	"name": "heroku/heroku-buildpack-php",
+	"description": "Toolkit for starting a PHP application locally, with or without foreman, using the same config for PHP and Apache2/Nginx as on Heroku",
+	"keywords": ["heroku", "foreman", "php", "apache", "apache2", "nginx"],
+	"homepage": "https://github.com/heroku/heroku-buildpack-php",
+	"type": "library",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "David Zuelke",
+			"email": "dz@heroku.com"
+		}
+	],
+	"bin": [
+		"bin/heroku-php-apache2",
+		"bin/heroku-php-nginx"
+	]
 }
