--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-	"name": "heroku/heroku-buildpack-php",
+	"name": "searchphp/heroku-buildpack-php",
 	"description": "Toolkit for starting a PHP application locally, with or without foreman, using the same config for PHP and Apache2/Nginx as on Heroku",
 	"keywords": ["heroku", "foreman", "php", "apache", "apache2", "nginx"],
-	"homepage": "https://github.com/heroku/heroku-buildpack-php",
+	"homepage": "https://github.com/searchphp/heroku-buildpack-php",
 	"type": "library",
 	"license": "MIT",
 	"authors": [
 		{
-			"name": "David Zuelke",
-			"email": "dz@heroku.com"
+			"name": "yuxinkao",
+			"email": "yuhsin901111@gmail.com"
 		}
 	],
 	"bin": [
