--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
-  "require": {
-    "silex/silex": "~1.1",
+  "require" : {
+},
+  "require-dev": {
+    "heroku/heroku-buildpack-php": "*"
   }
 }
